fix position issue on mobile navbar

--- a/styles.css
+++ b/styles.css
@@ -31,7 +31,7 @@ body {
 }
 
 .nav {
-    max-height: 100vh;
+    height: 100vh;
     width: var(--nav-width);
     background: linear-gradient(180deg, #324467, #283142);
     color: var(--main-white);
@@ -158,7 +158,7 @@ body {
         width: 95%;
         border-radius: 40px;
         height: 100px;
-        position: absolute;
+        position: fixed;
         display: block;
         top: unset;
         right: 0;
